# tg-book-of-grumdges

./: Cargo.toml  Dockerfile  LICENSE  README.md  bot-compose.yaml
migrations/2021-11-14-210608_create_ratings/: down.sql  up.sql
migrations/2021-11-14-213905_ratings_index/: down.sql  up.sql
src/: main.rs  migrations.rs  models.rs  schema.rs
