[package]
name = "tg-book-of-grumdges"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1", features = ["sqlite", "r2d2"] }
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { version = "0.5", features = ["auto-send"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
